<resources>
    <string name="app_name">TourGuideApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="element_name">Element name will here</string>
    <string name="element_type">Element type will be here</string>
    <string name="price_text">Price: </string>
    <string name="price_level_placeholder">$$$$</string>
    <string name="about_placeholder">Perfect choice for kebabs</string>
    <string name="start_level_placeholder">5</string>
    <string name="star_text">Star:</string>
    <string name="location_text">Location:</string>
    <string name="location_placeholder">Istanbul Sisli, No:9, 34885, Istanbul</string>
    <string name="website_text">Website:</string>
    <string name="website_placeholder">www.tryabc.com</string>

    <!-- Restaurants strings -->
    <string name="Turkey">Turkey</string>
    <string name="Istanbul">Istanbul</string>
    <string name="Fatih">Fatih</string>
    <string name="Iskenderpasa_mah">Iskenderpasa mahallesi</string>
    <string name="SImitci_saki_sok">Simitci Sakir Sokak</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Beyoglu">Beyoglu</string>
    <string name="Cihangir">Cihangir</string>
    <string name="Aga_cami_atif_yilmaz">Ağa Camii Atıf Yılmaz Caddesi</string>
    <string name="Cigeristan">Cigeristan</string>
    <string name="Haci_abdullah_lokantasi">Haci Abdullah Lokantasi</string>
    <string name="azci">Azci</string>
    <string name="ramiz_kofte">Ramiz Kofte</string>
    <string name="cigeristan_about">You can eat lung kebab in that restaurant. The taste is the best in Istanbul in that kebab I can say.</string>
    <string name="haci_abdullah_lokantasi_about">Historical restaurant serves you the best delicious of Ottoman culture since 1888.</string>
    <string name="azci_about">Perfect Turkish fast food restaurant</string>
    <string name="ramiz_kofte_about">The meats are really delicious.</string>
    <string name="cigeristan_website">www.cigeristan.com.tr</string>
    <string name="haci_abdullah_lokantasi_website">www.hacibdullah.com.tr</string>
    <string name="ramiz_kofte_website">www.ramizkofte.com.tr</string>
    <string name="iskenderpasa_mah">Iskenderpasa mahallesi</string>
    <string name="simit_sakir_sokak">Simitci Sakir Sokak</string>
    <string name="cigeristan_phone_num">0534 057 51 51</string>
    <string name="azci_phone_num">0534 057 51 51</string>
    <string name="ramiz_kofte_phone_num">0534 057 51 51</string>
    <string name="haci_abdullah_lokantasi_phone_num">0534 057 51 51</string>
    <string name="cigeristan_price">$$$</string>
    <string name="haci_abdullah_lokantasi_price">$$$</string>
    <string name="azci_price">$$$</string>
    <string name="ramiz_kofte_price">$$$</string>

    <!-- Museums strings -->
    <string name="cankurtaran_mah">Cankurtaran Mahallesi</string>
    <string name="Museum">Museum</string>
    <string name="Topkapi_palace">Topkapi Palace</string>
    <string name="Hagia_sophia_museum">Hagia Sophia Museum</string>
    <string name="Basilica_cistern">Basilica Cistern</string>
    <string name="Blue_mosque">Blue Mosque</string>
    <string name="Topkapi_palace_about">After the conquest of Istanbul by Mehmed the Conqueror at 1453, construction of the Topkapı Palace was started at the year 1460 and completed at 1478 . Palace was built upon a 700.000 squaremeters area on an Eastern Roman Acropolis located at the Istanbul Peninsula between Sea of Marmara, Bosphorus and the Golden Horn. Topkapı Palace, was the administrative, educational and art center of the Empire for nearly four hundred years since Mehmed the Conqueror until Sultan Abdulmecid who is the thirty-first Sultan. Although Palace was abandoned by the Ottoman Dynasty by moving to the Dolmabahçe Palace at middle 19th century, Topkapı Palace was protected its importance everytime.</string>
    <string name="hagia_sophia_about">From the date of its construction in 537 AD until 1453, it served as an Eastern Orthodox cathedral and the seat of the Patriarch of Constantinople,[1] except between 1204 and 1261, when it was converted by the Fourth Crusaders to a Roman Catholic cathedral under the Latin Empire. The building was later converted into an Ottoman mosque from 29 May 1453 until 1931. It was then secularized and opened as a museum on 1 February 1935.[2] Famous in particular for its massive dome, it is considered the epitome of Byzantine architecture[3] and is said to have changed the history of architecture.[4] It remained the world\'s largest cathedral for nearly a thousand years, until Seville Cathedral was completed in 1520.</string>
    <string name="basilica_cistern_about">is the largest of several hundred ancient cisterns that lie beneath the city of Istanbul (formerly Constantinople), Turkey. The cistern, located 150 metres (490 ft) southwest of the Hagia Sophia on the historical peninsula of Sarayburnu, was built in the 6th century during the reign of Byzantine Emperor Justinian I.[1]</string>
    <string name="blue_mosque_about">The Blue Mosque (Called Sultanahmet Camii in Turkish) is an historical mosque in Istanbul. The mosque is known as the Blue Mosque because of blue tiles surrounding the walls of interior design.Mosque was built between 1609 and 1616 years, during the rule of Ahmed I.</string>
    <string name="Kocatepe_mah">Kocatepe Mahallesi</string>
    <string name="abdulhak_hamit_cad">Abdülhak Hamit Cd.</string>
    <string name="iskenderpasa_mahallesi">Iskenderpasa mahallesi</string>
    <string name="Aga_cami_atif_yilmaz_cad">Ağa Camii Atıf Yılmaz Caddesi</string>
    <string name="topkapi_palace_website">www.topkapisarayi.gov.tr/en</string>
    <string name="hagia_sophia_website">www.ayasofyamuzesi.gov.tr</string>
    <string name="basilica_cistern_website">no website</string>
    <string name="blue_mosque_website">www.bluemosque.co</string>
    <string name="topkapi_palace_phone_num">(0212) 315 60 00</string>
    <string name="hagia_sophia_phone_num">(0212) 235 81 60</string>
    <string name="basilica_cistern_phone_num">0534 057 51 51</string>
    <string name="blue_mosque_phone_num">0534 057 51 51</string>
    <string name="Beyazit_mah">Beyazit Mahallesi</string>
    <string name="Bazaar">Bazaar</string>
    <string name="Grand_bazaar">Grand Bazaar</string>
    <string name="Egyptian_bazaar">Egyptian Bazaar</string>
    <string name="Pelican_mall">Pelican Mall</string>
    <string name="Cevahir_mall">Cevahir Mall</string>
    <string name="Grand_bazaar_about">One of the most historical marketplace all over the world. It has been working for more than 500 years.</string>
    <string name="Egyptian_bazaar_about">It is clear that this bazaar includes all of the natural food and spices in Turkey.</string>
    <string name="Pelican_mall_about">One of the mostly visited mall in Istanbul</string>
    <string name="Cevahir_mall_about">Great place to hangout directly in the middle of Istanbul</string>
    <string name="Grand_bazaar_website">www.kapalicarsi.com.tr</string>
    <string name="Eyptian_bazaar_website">www.misircarsisi.org.tr</string>
    <string name="Pelican_mall_website">www.pelicanmall.com.tr</string>
    <string name="Cevahir_mall_website">www.istanbulcevahir.com</string>
    <string name="Grand_bazaar_phone_num">(0212) 315 60 00</string>
    <string name="Egytian_bazaar_phone_num">(0212) 235 81 60</string>
    <string name="Pelican_mall_phone_num">0534 057 51 51</string>
    <string name="Cevahir_mall_phone_num">0534 057 51 51</string>
    <string name="Sisli">Sisli</string>
    <string name="Hariye_mahallesi">Harbiye Mahallesi</string>
    <string name="Cumhiriyyet_cad">Cumhuriyet Cd</string>
    <string name="Hotel">Hotel</string>
    <string name="Hilton_hotel">Hilton Hotel Bosphorus</string>
    <string name="Avantgarde_taksim_hotel">Avantgarde Taksim Hotel</string>
    <string name="Elmali_hotel">Elmali Hotel</string>
    <string name="Double_tree_hotel">Double Tree Hotel</string>
    <string name="Hilton_hotel_about">Life in the heart of Istanbul</string>
    <string name="Avantgarde_taksim_hotel_abot">Great Boutic Hotel</string>
    <string name="Elmali_hotel_about">Hotel in the green wood.</string>
    <string name="Double_tree_hotel_about">Great luxurious hotel</string>
    <string name="Hilton_hotel_website">www.hilton.com.tr</string>
    <string name="Avantgarde_hotel_website">www.avantgardecollection.com/Hotel/Taksim</string>
    <string name="Double_tree_hotel_website">www.hilton.com.tr</string>
    <string name="Hilton_hotel_phone_num">(0212) 315 60 00</string>
    <string name="Avantgrade_hotel_phone_num">(0212) 235 81 60</string>
    <string name="Elmali_hotel_phone_num">0534 057 51 51</string>
    <string name="Double_tree_hotel_phone_num">0534 057 51 51</string>
    <string name="Hilton_hotel_price">$$$</string>
    <string name="Avantgrade_hotel_price">$</string>
    <string name="Elmali_hotel_price">$$$$$</string>
    <string name="Double_tree_hotel_price">$$$</string>
    <string name="navigation_title">My header title</string>


    <!-- Header array-->
    <string-array name="headers">
        <item>Restaurants</item>
        <item>Hotels</item>
        <item>Bazaars</item>
        <item>Museums</item>
    </string-array>

</resources>
