<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tan_background"
    android:minHeight="@dimen/list_item_height"
    android:orientation="vertical"
    android:padding="13dp"
    android:layout_margin="13dp">


    <TextView
        android:id="@+id/element_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/element_header"
        tools:text="@string/element_name"
        />

    <TextView
        android:id="@+id/element_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/element_type"
        tools:text="@string/element_type"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/element_price"
            tools:text="@string/price_text"
            />

        <TextView
            android:id="@+id/price_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="11sp"
            android:textColor="@color/element_price"
            tools:text="@string/price_level_placeholder"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/star_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/element_star"
            tools:text="@string/star_text"
            />

        <TextView
            android:id="@+id/star_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="11sp"
            android:textColor="@color/element_star"
            tools:text="@string/start_level_placeholder"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/element_line_color"
        android:layout_marginRight="278dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/element_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/element_about"
        tools:text="@string/about_placeholder"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@color/element_location"
            tools:text="@string/location_text"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="11sp"
            android:textColor="@color/element_location"
            tools:text="@string/location_placeholder"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/website_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="@color/element_website"
            tools:text="@string/website_text"
            />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="11sp"
            android:textColor="#877f80"
            tools:text="@string/website_placeholder"
            />

    </LinearLayout>
</LinearLayout>